# fraud_detection_ai

./: README.md  app.py  requirements.txt
backend/: README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/langchain/: llm_instance.py  workflow_graph.py
backend/models/: xgb_fraud_email_model_768.json  xgb_fraud_sms_model_768.json
backend/scrap_codes/: state.py  workflow_graph_v1.py
backend/utils/: fraud_detection_handler.py
docs/: resources.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyzeButton.jsx  Header.jsx  LoadingAnimation.jsx  ResultsDisplay.jsx  TextInputArea.jsx  index.js
langchain/: beta_graph.py  graphooo.py  keep.py  lang_graph.py  llm_instance.py  state.py  tools.py  workflow_graph.py
models/: xgb_phishing_url_model_768.json
scrap_codes/: todo.md
utils/: fraud_detection_handler.py
