[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "mangum>=0.19.0",
    "numpy>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "xgboost>=3.0.2",
]
